# django-common-auth0

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
lj_common_shared_service/: __init__.py
lj_common_shared_service/abstract/: models.py
lj_common_shared_service/auth0/: authentication.py  helper.py  settings.py
lj_common_shared_service/authentication/: __init__.py  admin.py  apps.py  filters.py  forms.py  middleware.py  models.py  tests.py  urls.py
lj_common_shared_service/authentication/migrations/: 0001_initial.py  0001_squashed_0024_auto_20230703_1632.py  0002_auto_20230828_0840.py  0003_auto_20230828_1214.py  0004_ljorganizationteammember_status.py  0005_ljorganizationteammember_uuid.py  0006_alter_ljorganizationteammember_uuid.py  0007_ljorganizationteammember_is_customer_facing.py  0008_alter_ljorganization_photo.py
lj_common_shared_service/core/: __init__.py  admin.py  apps.py  models.py
lj_common_shared_service/core/migrations/: 0001_initial.py  0001_squashed_0009_auto_20230703_1643.py  0002_alter_ljcategory_photo.py  0003_auto_20240523_0923.py
lj_common_shared_service/referrals/: admin.py  apps.py  models.py  utils.py
lj_common_shared_service/rest/: __init__.py  apps.py  mixins.py  paginators.py  permissions.py  urls.py
lj_common_shared_service/rest/exceptions/: api.py
lj_common_shared_service/utils/: __init__.py  admin.py  apps.py  db.py  decorators.py  email.py  enums.py  exceptions.py  fields.py  file.py  filters.py  holders.py  image.py  managers.py  mixins.py  signals.py  utils.py
(+46 files in other folders)
