[metadata]
name = django-common-shared-service
version = 1.0.0
description = A Django common auth0 service for user.
long_description = file: README.rst
author = Permaling LLC
author_email = contact@permaling.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
setup_requires =
  setuptools>=50.3.2
  setuptools-declarative-requirements

[requirements-files]
setup_requires = requirements.txt
install_requires = requirements.txt
tests_require = requirements.txt
